--- a/examples/bzlmod_build_file_generation/MODULE.bazel
+++ b/examples/bzlmod_build_file_generation/MODULE.bazel
@@ -14,6 +14,7 @@ module(
 # See the releases page for available versions.
 # https://github.com/bazelbuild/rules_python/releases
 bazel_dep(name = "rules_python", version = "0.0.0")
+bazel_dep(name = "rules_go", version = "0.48.0")
 
 # The following loads rules_python from the file system.
 # For usual setups you should remove this local_path_override block.
@@ -38,7 +39,7 @@ local_path_override(
 # The following stanza defines the dependency for gazelle
 # See here https://github.com/bazelbuild/bazel-gazelle/releases/ for the
 # latest version.
-bazel_dep(name = "gazelle", version = "0.30.0", repo_name = "bazel_gazelle")
+bazel_dep(name = "gazelle", version = "0.36.0", repo_name = "bazel_gazelle")
 
 # The following stanze returns a proxy object representing a module extension;
 # its methods can be invoked to create module extension tags.
@@ -85,3 +86,38 @@ local_path_override(
     module_name = "other_module",
     path = "other_module",
 )
+
+bazel_dep(name = "toolchains_llvm", version = "1.0.0")
+
+# To directly use a commit from GitHub, replace commit with the commit you want.
+# Otherwise, omit this block.
+#git_override(
+#    module_name = "toolchains_llvm",
+#    commit = "1403b8481f1034f9cb34091b4be9a1f6e84f0c2a",
+#    remote = "https://github.com/bazel-contrib/toolchains_llvm",
+#)
+
+local_path_override(
+    module_name = "toolchains_llvm",
+    path = "../../../toolchains_llvm",
+)
+
+# Configure and register the toolchain.
+llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
+llvm.toolchain(
+    name = "llvm_toolchain_llvm",
+    llvm_version = "16.0.0",
+)
+llvm.sysroot(
+    name = "llvm_toolchain_llvm",
+    path = "/tmp/MacOSX11.3.sdk",
+    targets = [
+        "darwin-x86_64",
+        "darwin-aarch64",
+    ],
+)
+
+#use_repo(llvm, "llvm_toolchain")
+use_repo(llvm, "llvm_toolchain_llvm")  # if you depend on specific tools in scripts
+
+register_toolchains("@llvm_toolchain_llvm//:all")
